--- a/Extent_Test_report.html
+++ b/Extent_Test_report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Oct 10, 2022 03:50:31 AM</span></a>
+<a href="#"><span class="badge badge-primary">Oct 10, 2022 06:37:23 AM</span></a>
 </li>
 </ul>
 </div>
@@ -66,25 +66,25 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Oct 10, 2022 03:50:31 AM</h3>
+<h3>Oct 10, 2022 06:37:23 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Oct 10, 2022 03:50:57 AM</h3>
+<h3>Oct 10, 2022 06:37:27 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-pass">Features Passed</p>
-<h3>0</h3>
+<h3>1</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-fail">Features Failed</p>
-<h3>2</h3>
+<h3>0</h3>
 </div></div>
 </div>
 </div>
@@ -100,12 +100,12 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='0%'>
-<b>0</b> features passed
+<div><small data-tooltip='100%'>
+<b>1</b> features passed
 </small>
 </div>
 <div>
-<small data-tooltip='100%'><b>2</b> features failed,
+<small data-tooltip='0%'><b>0</b> features failed,
 <b>0</b> skipped, <b data-tooltip='0%'>0</b> others
 </small>
 </div>
@@ -123,9 +123,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='0%'><b>0</b> scenarios passed</small></div>
+<div><small data-tooltip='100%'><b>2</b> scenarios passed</small></div>
 <div>
-<small data-tooltip='100%'><b>5</b> scenarios failed,
+<small data-tooltip='0%'><b>0</b> scenarios failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -143,10 +143,10 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='0%'><b>0</b> steps passed</small></div>
+<div><small data-tooltip='100%'><b>6</b> steps passed</small></div>
 <div>
-<small data-tooltip='33%'><b>5</b> steps failed,
-<b>10</b> skipped, <b data-tooltip='%'>0</b> others
+<small data-tooltip='0%'><b>0</b> steps failed,
+<b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
 </div>
@@ -162,7 +162,7 @@
 </div></div>
 <script>
 var timeline = {
-"Verify Regres.in functionality":13.929,"Verify jquery selenium functionality":10.574
+"Verify Regres.in functionality":3.373
 };
 </script>
 <div class="row">
@@ -172,12 +172,12 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>@sanity</td>
+<td>@rest</td>
+<td>2</td>
 <td>0</td>
-<td>5</td>
 <td>0</td>
 <td>0</td>
-<td>0%</td>
+<td>100%</td>
 </tr>
 </tbody>
 </table></div>
@@ -188,21 +188,21 @@ var timeline = {
 <script>
 var statusGroup = {
 parentCount: 5,
-passParent: 0,
-failParent: 2,
+passParent: 1,
+failParent: 0,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
-passChild: 0,
-failChild: 5,
+passChild: 2,
+failChild: 0,
 warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 0,
-failGrandChild: 5,
+passGrandChild: 6,
+failGrandChild: 0,
 warningGrandChild: 0,
-skipGrandChild: 10,
+skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
 };
@@ -216,7 +216,7 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation-circle"></i></a>
 <ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" status="fail" href="#"><span>Fail</span><span class="status danger"></span></a>
+<a class="dropdown-item" status="pass" href="#"><span>Pass</span><span class="status success"></span></a>
 <div class="dropdown-divider"></div>
 <a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 </ul>
@@ -224,31 +224,31 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@sanity</a>
+<a class="dropdown-item" href="#">@rest</a>
 </ul>
 </li>
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="fail" test-id="1"
+        <li class="test-item"  status="pass" test-id="1"
           author=""
           tag=""
           device="">
           <div class="test-detail">
             <p class="name">Verify Regres.in  functionality</p>
             <p class="text-sm">
-              <span>3:50:32 AM</span> / <span>00:00:13:929</span>
-              <span class="badge fail-bg log float-right">Fail</span>
+              <span>6:37:23 AM</span> / <span>00:00:03:373</span>
+              <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-fail">Verify Regres.in functionality</h5>
-<span class='badge badge-success'>10.10.2022 3:50:32 AM</span>
-<span class='badge badge-danger'>10.10.2022 3:50:46 AM</span>
-<span class='badge badge-default'>00:00:13:929</span>
+<h5 class="test-status text-pass">Verify Regres.in functionality</h5>
+<span class='badge badge-success'>10.10.2022 6:37:23 AM</span>
+<span class='badge badge-danger'>10.10.2022 6:37:27 AM</span>
+<span class='badge badge-default'>00:00:03:373</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -260,24 +260,24 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log fail-bg mr-2">Fail</span>Verify Get API functionality.</div>
+        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Verify Get API functionality.</div>
       </div>
     </div>
-        <div class="">
+        <div class="collapse">
           <div class="card-body">
-              <div class="step fail-bg" >
+              <div class="step pass-bg" title="stepDefinitions.ResrAssuredSteps.verify_if_the_status_code_is200()">
                 <span>Given Verify if the status code is 200</span>
-      <div>Step undefined
+      <div>
       </div>
               </div>
-              <div class="step skip-bg" >
+              <div class="step pass-bg" title="stepDefinitions.ResrAssuredSteps.verify_the_value_of_first_name_for_is_byron()">
                 <span>Then Verify the value of first_name for "id": 10 is ‘Byron’</span>
-      <div>Step skipped
+      <div>
       </div>
               </div>
-              <div class="step skip-bg" >
+              <div class="step pass-bg" title="stepDefinitions.ResrAssuredSteps.verification_successful()">
                 <span>And Verification Successful</span>
-      <div>Step skipped
+      <div>
       </div>
               </div>
           </div>
@@ -286,132 +286,24 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="10"><span class="badge log fail-bg mr-2">Fail</span>Verify Post API functionality.</div>
+        <div class="node" id="9"><span class="badge log pass-bg mr-2">Pass</span>Verify Post API functionality.</div>
       </div>
     </div>
-        <div class="">
+        <div class="collapse">
           <div class="card-body">
-              <div class="step fail-bg" >
+              <div class="step pass-bg" title="stepDefinitions.ResrAssuredSteps.verify_if_the_status_code_is_201()">
                 <span>Given Verify if the status code is 201</span>
-      <div>Step undefined
+      <div>
       </div>
               </div>
-              <div class="step skip-bg" >
+              <div class="step pass-bg" title="stepDefinitions.ResrAssuredSteps.verify_if_the_id_is_generated()">
                 <span>Then Verify if the id is generated</span>
-      <div>Step skipped
+      <div>
       </div>
               </div>
-              <div class="step skip-bg" >
+              <div class="step pass-bg" title="stepDefinitions.ResrAssuredSteps.verify_the_response_json_scheme()">
                 <span>And Verify the response json scheme</span>
-      <div>Step skipped
-      </div>
-              </div>
-          </div>
-        </div>
-  </div>
-</div>
-          </div>
-        </li>
-        <li class="test-item"  status="fail" test-id="18"
-          author=""
-          tag=""
-          device="">
-          <div class="test-detail">
-            <p class="name">Verify jquery selenium functionality</p>
-            <p class="text-sm">
-              <span>3:50:46 AM</span> / <span>00:00:10:574</span>
-              <span class="badge fail-bg log float-right">Fail</span>
-            </p>
-          </div>
-          <div class="test-contents d-none">
-<div class="detail-head">
-<div class="p-v-10">
-<div class="info">
-<h5 class="test-status text-fail">Verify jquery selenium functionality</h5>
-<span class='badge badge-success'>10.10.2022 3:50:46 AM</span>
-<span class='badge badge-danger'>10.10.2022 3:50:57 AM</span>
-<span class='badge badge-default'>00:00:10:574</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=18</span>
-<span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
-<span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
-</div>
-<div class="m-t-10 m-l-5"></div>
-</div>
-</div>
-<div class="accordion mt-4">
-  <div class="card">
-    <div class="card-header" role="tab">
-      <div class="card-title">
-        <div class="node" id="19"><span class="badge log fail-bg mr-2">Fail</span>Verify Droppable functionality.</div>
-      </div>
-    </div>
-        <div class="">
-          <div class="card-body">
-              <div class="step fail-bg" >
-                <span>Given User click on Droppable option under interactions section</span>
-      <div>Step undefined
-      </div>
-              </div>
-              <div class="step skip-bg" >
-                <span>Then User perform drag and drop function.</span>
-      <div>Step skipped
-      </div>
-              </div>
-              <div class="step skip-bg" >
-                <span>And Verify Drop here changed to Dropped.</span>
-      <div>Step skipped
-      </div>
-              </div>
-          </div>
-        </div>
-  </div>
-  <div class="card">
-    <div class="card-header" role="tab">
-      <div class="card-title">
-        <div class="node" id="27"><span class="badge log fail-bg mr-2">Fail</span>Verify Selectable functionality.</div>
-      </div>
-    </div>
-        <div class="">
-          <div class="card-body">
-              <div class="step fail-bg" >
-                <span>Given User click on Selectable option under interactions section</span>
-      <div>Step undefined
-      </div>
-              </div>
-              <div class="step skip-bg" >
-                <span>Then User click on item1,item3 and item7.</span>
-      <div>Step skipped
-      </div>
-              </div>
-          </div>
-        </div>
-  </div>
-  <div class="card">
-    <div class="card-header" role="tab">
-      <div class="card-title">
-        <div class="node" id="34"><span class="badge log fail-bg mr-2">Fail</span>Verify Control Group Functionality.</div>
-      </div>
-    </div>
-        <div class="">
-          <div class="card-body">
-              <div class="step fail-bg" >
-                <span>Given User click on Controlgroup option under widgets section</span>
-      <div>Step undefined
-      </div>
-              </div>
-              <div class="step skip-bg" >
-                <span>Then User click Automatic and insurance radio button.</span>
-      <div>Step skipped
-      </div>
-              </div>
-              <div class="step skip-bg" >
-                <span>And Verify click on standard and Insurance radio button.</span>
-      <div>Step skipped
-      </div>
-              </div>
-              <div class="step skip-bg" >
-                <span>And Verify user click on Book Now!</span>
-      <div>Step skipped
+      <div>
       </div>
               </div>
           </div>
@@ -440,15 +332,15 @@ eventsCount: 5,
 <li class="test-item">
 <div class="test-detail">
 <span class="meta">
-<span class='badge log badge-danger'>5</span>
+<span class='badge log pass-bg'>2</span>
 </span>
-<p class="name">@sanity</p>
-<p class="duration text-sm">5 tests</p>
+<p class="name">@rest</p>
+<p class="duration text-sm">2 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>@sanity</h4>
-<span status="fail" class='badge log badge-danger'>5 failed</span>
+<h4>@rest</h4>
+<span status="pass" class='badge log pass-bg'>2 passed</span>
 </div>
 <table class='table table-sm mt-4'>
 <thead>
@@ -459,9 +351,9 @@ eventsCount: 5,
 </tr>
 </thead>
 <tbody>
-<tr class="tag-test-status" status="fail">
-<td><span class="badge log fail-bg">Fail</span></td>
-<td>03:50:32 AM</td>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>06:37:23 AM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='2'>Verify Get API functionality.</a>
 <div class="">
@@ -469,43 +361,13 @@ eventsCount: 5,
 </div>
 </td>
 </tr>
-<tr class="tag-test-status" status="fail">
-<td><span class="badge log fail-bg">Fail</span></td>
-<td>03:50:40 AM</td>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>06:37:25 AM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='10'>Verify Post API functionality.</a>
+<a href="#" class="linked" test-id='1' id='9'>Verify Post API functionality.</a>
 <div class="">
 <span class="badge badge-default">Verify Regres.in functionality.Verify Post API functionality.</span>
-</div>
-</td>
-</tr>
-<tr class="tag-test-status" status="fail">
-<td><span class="badge log fail-bg">Fail</span></td>
-<td>03:50:46 AM</td>
-<td>
-<a href="#" class="linked" test-id='18' id='19'>Verify Droppable functionality.</a>
-<div class="">
-<span class="badge badge-default">Verify jquery selenium functionality.Verify Droppable functionality.</span>
-</div>
-</td>
-</tr>
-<tr class="tag-test-status" status="fail">
-<td><span class="badge log fail-bg">Fail</span></td>
-<td>03:50:50 AM</td>
-<td>
-<a href="#" class="linked" test-id='18' id='27'>Verify Selectable functionality.</a>
-<div class="">
-<span class="badge badge-default">Verify jquery selenium functionality.Verify Selectable functionality.</span>
-</div>
-</td>
-</tr>
-<tr class="tag-test-status" status="fail">
-<td><span class="badge log fail-bg">Fail</span></td>
-<td>03:50:53 AM</td>
-<td>
-<a href="#" class="linked" test-id='18' id='34'>Verify Control Group Functionality.</a>
-<div class="">
-<span class="badge badge-default">Verify jquery selenium functionality.Verify Control Group Functionality.</span>
 </div>
 </td>
 </tr>
